[package]
name = "matt_boats"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = "0.19"
log = "0.4.6"
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8.5"
gloo = "0.7.0"
nalgebra = "0.30.1"
wasm-bindgen = "0.2.74"
chrono = { version = "0.4.10", features = ["wasmbind"] }
bincode = "1.3.3"
image = "0.24.3"
base64 = "0.13.0"

[dependencies.web-sys]
version = "0.3.57"
features = ["HtmlDocument"]

