[package]
name = "matt_boats"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = "0.19"
rand = "0.8.5"
gloo = "0.8.0"
nalgebra = "0.30.1"
wasm-bindgen = "0.2.82"
bincode = "1.3.3"
image = "0.24.3"
base64 = "0.13.0"
serde = "1.0.141"
chrono = "0.4.23"

[dependencies.web-sys]
version = "0.3.57"
features = ["HtmlDocument", "KeyEvent", "HtmlButtonElement"]
